<resources>
    <string name="app_name">SpeakShot</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- general settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_description_misc">Miscellaneous</string>

    <string name="pref_title_vibration_switch">Enable vibration</string>
    <string name="pref_description_vibration_switch">Allows the app to give tactile feedback.</string>

    <!-- audio output -->
    <string name="pref_description_audio">Audio output</string>

    <string name="pref_title_audio_output_switch">Enable audio output</string>
    <string name="pref_description_audio_output_switch">Allows the app to output audio for reading text results, instructions or hints.</string>

    <string name="pref_title_assistance_switch">Enable snapshot assistance</string>
    <string name="pref_description_assistance_switch">Allows the app to assist the user with audio instructions when making a snapshot.</string>

    <string name="pref_title_hints_switch">Enable hints</string>
    <string name="pref_description_hints_switch">Allows the app to give the user hints.</string>

    <string name="pref_title_speechrate">Reading speed</string>
    <string-array name="pref_speechrate_titles">
        <item>Slow</item>
        <item>Normal</item>
        <item>Faster</item>
        <item>Very Fast</item>
        <item>Fastest</item>
    </string-array>
    <string-array name="pref_speechrate_values">
        <item>0.5</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="speech_demo_sentence">This is the newly assigned speed. Are you happy with it?</string>

    <!-- appearance settings -->
    <string name="pref_header_appearance">Appearance</string>

    <string name="pref_title_theme">Theme</string>
    <string name="pref_description_theme">In order for the theme change to take effect, the app must be restarted.</string>
    <string-array name="pref_theme_titles">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="pref_theme_values">
        <item>light</item>
        <item>dark</item>
    </string-array>

    <!-- reead results -->
    <string name="read_results_no_text_blocks_found">No text blocks found</string>
    <string name="read_results_audio_result_x_of_y">Result %1$d of %2$d : %3$s</string>
    <string name="read_results_textview_header_result_x_of_y">Result %1$d of %2$d</string>

    <!-- read mode selector / spinner / combobox -->
    <string-array name="read_mode_array">
        <item>General</item>
        <item>Letter</item>
    </string-array>
    <string-array name="read_mode_values">
        <item>general</item>
        <item>letter</item>
    </string-array>

    <!-- search mode selector / spinner / combobox -->
    <string-array name="search_mode_array">
        <item>General</item>
        <item>Doorplate</item>
    </string-array>
    <string-array name="search_mode_values">
        <item>general</item>
        <item>doorplate</item>
    </string-array>

    <!-- toasts -->
    <string name="toast_no_text_found">No text found.</string>
    <string name="toast_snapshot_saved_to">Photo saved to %1$s.</string>
    <string name="toast_search_term_found_within_text">Search term \'%1$s\' found within \'%2$s\'.</string>
    <string name="toast_searching_for">Searching for \'%1$s\'.</string>

    <!-- hints -->
    <string name="read_mode_hint_general">Read Mode entered. In order to read text you have to take a photo. Long press on free display space. If necessary you can switch on the light by pressing the button in the bottom right corner. Alternatively, you can also view your already taken photos by pressing the button in the bottom middle.</string>
    <string name="read_mode_hint_no_text_found">No text found.</string>
    <string name="read_mode_snapshot_saved">Photo saved. In order to read the found text results, press the button in the left bottom corner.</string>
    <string name="read_mode_snapshot_deleted">Photo deleted.</string>
    <string name="read_mode_results_hint">By means of the buttons at the bottom of the screen "previous text block", "read current text block" and "next text block" you can navigate through the results just as you would with an audio player.</string>
    <string name="read_mode_history_hint">By means of the buttons at the bottom of the screen "previous photo", "analyze current photo" und "next photo" you can navigate through the stored photos. You can delete the current photo by pressing the button in the bottom right corner.</string>
    <string name="search_mode_hint_general">Search Mode entered. In order to search a certain text you have to enter a search term. Tap on free display space. If the text you are looking for has been found, you can display all found text blocks by pressing the button at the bottom left.</string>
    <string name="search_mode_dialog_search_term">Search:</string>


    <!-- guiding command -->
    <string name="guiding_command">Ausrichtung: %s</string>

    <!-- guiding directions -->
    <string-array name="guiding_direction">
        <item></item>                               <!-- 0000 -->
        <item>weiter links bewegen</item>           <!-- 0001 : left -->
        <item>weiter oben bewegen</item>            <!-- 0010 : top -->
        <item>weiter oben-links bewegen</item>      <!-- 0011 : left, top -->
        <item>weiter rechts bewegen</item>          <!-- 0100 : right -->
        <item>weiter zurück bewegen</item>          <!-- 0101 : right, left -->
        <item>weiter oben-rechts bewegen</item>     <!-- 0110 : right, top -->
        <item>weiter zurück bewegen</item>          <!-- 0111 : right, left, top -->
        <item>weiter unten bewegen</item>           <!-- 1000 : bot -->
        <item>weiter unten-links bewegen</item>     <!-- 1001 : bot, left -->
        <item>weiter zurück bewegen</item>          <!-- 1010 : bot, top -->
        <item>weiter zurück bewegen</item>        <!-- 1011 : bot, left, top -->
        <item>weiter unten-rechts bewegen</item>   <!-- 1100 : bot, right -->
        <item>weiter zurück bewegen</item>         <!-- 1101 : bot, right, left -->
        <item>weiter zurück bewegen</item>         <!-- 1110 : bot, right, right -->
        <item>weiter zurück bewegen</item>         <!-- 1111 : bot, left, top, right -->
    </string-array>

    <!-- guiding rotations -->
    <string-array name="guiding_rotation">
        <item></item>                                         <!-- 0000 -->
        <item>weiter vor neigen</item>                        <!-- 0001 : to -->
        <item>weiter zurück neigen</item>                     <!-- 0010 : back -->
        <item>weiter zurück-vorn neigen</item>                <!-- 0011 : to, back => never -->
        <item>weiter rechts neigen</item>                     <!-- 0100 : right -->
        <item>weiter rechts-vor neigen</item>                 <!-- 0101 : right, to -->
        <item>weiter rechts-zurück neigen</item>              <!-- 0110 : right, back -->
        <item>weiter zurück-vorn neigen</item>                <!-- 0111 : right, to, back => never -->
        <item>weiter links neigen</item>                      <!-- 1000 : left -->
        <item>weiter links-vor neigen</item>                  <!-- 1001 : left, to -->
        <item>weiter links-zurück neigen</item>              <!-- 1010 : left, back -->
        <item>weiter links-zurück-vorn neigen</item>         <!-- 1011 : left, to, back => never -->
        <item>weiter links-rechts neigen</item>              <!-- 1100 : left, right => never -->
        <item>weiter links-rechts-vorn neigen</item>         <!-- 1101 : left, right, to => never -->
        <item>weiter links-rechts-zurück neigen</item>       <!-- 1110 : left, right, back => never -->
        <item>weiter links-rechts-zurück-vorn neigen</item>  <!-- 1111 : left, to, back, right => never -->
    </string-array>

</resources>
