<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="audio_output_switch"
        android:summary="@string/pref_description_audio_output_switch"
        android:title="@string/pref_title_audio_output_switch" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="vibration_switch"
        android:summary="@string/pref_description_vibration_switch"
        android:title="@string/pref_title_vibration_switch" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_theme_titles"
        android:entryValues="@array/pref_theme_values"
        android:key="theme"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_theme" />

    <ListPreference
        android:defaultValue="15"
        android:entries="@array/pref_font_size_titles"
        android:entryValues="@array/pref_font_size_values"
        android:key="font_size"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_font_size" />

</PreferenceScreen>
